--- a/index.html
+++ b/index.html
@@ -35,86 +35,100 @@
         </div>
     </header>
     <main>
-       <div class="container">
         <section class="hero">
+          <div class="container">
             <div class="hero-content">
               <h1 class="hero-title">Awesome tools for <br> <span>Designer & Developer</span> <span class="dot">.</span></h1>
               <p class="hero-subtitle">
                 Antool is a web collection of information on paid or <br> free Design and Development tools.
               </p>
               </div>
-                <form action="">
+                <form class="search-form" action="">
                 <input type="text" placeholder=" &#128269 Find more than 430+ tools..." />
                 <button class="hero-button" type="button">Search</button>
                 </form>
-              </section>
+                <div>
+                <div class="social-icons">
+                <a href="#"><img src="./img/svg/facebook-logo.svg" alt="facebook icon"></a>
+                <a href="#"><img src="./img/svg/instagram-logo.svg" alt="instagram icon"></a>
+                <a href="#"><img src="./img/svg/twitter-logo.svg" alt="twitter icon"></a>
               </div>
-
-             <div class="container">
+            </div>
+                </div>
+              </section>
+            </div>
+           
               <section class="popular-tools">
-                <h2>Most Popular Tools</h2>
-                 <p>Tools for the best Desigers and Developers most popularly used in the world</p>
+                 <h2 class="tools-title">Most Popular Tools</h2>
+                 <p class="tools-subtitle">Tools for the best Desigers and Developers <br> most popularly used in the world</p>
 
-                   <div class="card">
-                    <img src="" alt="" class="toolIcon">
+            <div class="cards">
+                <div class="card"><img src="/img/Figma-logo.png" alt="" class="toolIcon">
                     <h3>FIGMA</h3>
-                    <p class="tool-free">Free</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit.</p>
-                     <button type="button" class="action-bthLike">❤</button>
-                     <button type="button" class="action-bthSave">📂</button>
-                     <button class="button-visit" type="button">visit</button>
-                 </div>
-                  
-                   <div class="card">
-                    <img src="" alt="" class="toolIcon">
-                    <h3>Sketch</h3>
-                    <p class="tool-free">Trial & Paid</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit.</p>
-                     <button type="button" class="action-bthLike">♥️</button>
-                     <button type="button" class="action-bthSave">📂</button>
-                     <button class="visit-orange" type="button">visit</button>
-                 </div>
-
-                   <div class="card">
-                    <img src="" alt="" class="toolIcon">
-                    <h3>Visual Studio Code</h3>
-                    <p class="tool-free">Free</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit.</p>
-                     <button type="button" class="action-bthLike">❤</button>
-                     <button type="button" class="action-bthSave">📂</button>
-                     <button class="button-visit" type="button">visit</button>
-                 </div>
-
-                   <div class="card">
-                    <img src="" alt="" class="toolIcon">
-                    <h3>Notion</h3>
-                    <p class="tool-free">Free & Paid</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit.</p>
-                     <button type="button" class="action-bthLike">❤</button>
-                     <button type="button" class="action-bthSave">📂</button>
-                     <button class="button-visit" type="button">visit</button>
-                 </div>
-
-                   <div class="card">
-                    <img src="" alt="" class="toolIcon">
-                    <h3>Slack</h3>
-                    <p class="tool-free">Free & Paid</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit.</p>
-                     <button type="button" class="action-bthLike">❤</button>
-                     <button type="button" class="action-bthSave">📂</button>
-                     <button class="button-visit" type="button">visit</button>
-                 </div>
-
-                   <div class="card">
-                    <img src="" alt="" class="toolIcon">
-                    <h3>Invision</h3>
-                    <p class="tool-free">Free & Paid</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit.</p>
-                     <button type="button" class="action-bthLike">❤</button>
-                     <button type="button" class="action-bthSave">📂</button>
-                     <button class="button-visit" type="button">visit</button>
-                 </div>
-
+                    <p class="toolPaid">Free</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <div class="toolAction">
+                        <button class="action-btnLike">❤</button>
+                        <button class="action-btnSave">📂</button>
+                        <a href="#" class="visit">Visit</a>
+                    </div>
+                    </div>
+                    <div class="card">
+                        <img src="/img/sketch-logo.png" alt="" class="toolIcon">
+                        <h3>Sketch</h3>
+                        <p class="toolPaid">Trial & Paid</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="toolAction">
+                            <button class="action-btnLike">♥️</button>
+                            <button class="action-btnSave">📂</button>
+                            <button type="button" class="visit">Visit</button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="/img/vs-code-logo.png" alt="" class="toolIcon">
+                        <h3> Visual Stdio Code</h3>
+                        <p class="toolPaid">Free</p>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                        <div class="toolAction">
+                          <button class="action-btnLike">❤</button>
+                          <button class="action-btnSave">📂</button>
+                          <button type="button" class="visit-orange">Visit</button>
+                        </div>
+                    </div>
+                    <div class="card">
+                      <img src="/img/notion-logo.png" alt="" class="toolIcon">
+                      <h3>Notion</h3>
+                      <p class="toolPaid">Free & Paid</p>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                      <div class="toolAction">
+                        <button class="action-btnLike">❤</button>
+                        <button class="action-btnSave">📂</button>
+                        <button type="button" class="visit">Visit</button>
+                      </div>
+                    </div>
+                    <div class="card">
+                      <img src="/img/slack-logo.png" alt="" class="toolIcon">
+                      <h3>Slack</h3>
+                      <span class="toolPaid">Free & Paid</span>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                      <div class="toolAction">
+                        <button class="action-btnLike">❤</button>
+                        <button class="action-btnSave">📂</button>
+                        <button type="button" class="visit">Visit</button>
+                      </div>
+                    </div> 
+                    <div class="card">
+                      <img src="/img/invision-logo.png" alt="" class="toolIcon">
+                      <h3>Invision</h3>
+                      <p class="toolPaid">Free & Paid</p>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                      <div class="toolAction">
+                        <button class="action-btnLike">❤</button>
+                        <button class="action-btnSave">📂</button>
+                        <button type="button" class="visit">Visit</button>
+                      </div>
+                    </div>
+            </div>
                  <button type="button" class="button-load">Load more</button>      
               </section>
              </div>
@@ -131,7 +145,7 @@
              <div class="container">
              <section class="newcommer-tools">
               <div class="description">
-                <h2>Newcomer Tools</h2>
+                <h3>Newcomer Tools</h3>
                 <p>Wow! see the latest update of the most <br> recommended tools from reliable designers <br> and developers</p>
                 <button type="button" class="button-explore">Explore more</button>
               </div>
