--- a/index.html
+++ b/index.html
@@ -52,9 +52,12 @@
         </form>
         <div>
           <div class="social-icons">
-            <a href="#"><img src="./img/svg/facebook-logo.svg" alt="facebook icon"></a>
-            <a href="#"><img src="./img/svg/instagram-logo.svg" alt="instagram icon"></a>
-            <a href="#"><img src="./img/svg/twitter-logo.svg" alt="twitter icon"></a>
+            <a href="https://www.facebook.com/?locale=ru_RU" target="_blank"><img src="./img/svg/facebook-logo.svg"
+                alt="facebook icon"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="./img/svg/instagram-logo.svg"
+                alt="instagram icon"></a>
+            <a href="https://x.com/?lang=ru" target="_blank"><img src="./img/svg/twitter-logo.svg"
+                alt="twitter icon"></a>
           </div>
         </div>
       </div>
@@ -166,6 +169,7 @@
             </div>
           </div>
         </div>
+        <button class="load-bth" type="button">Load more</button>
       </div>
     </section>
 
@@ -173,69 +177,107 @@
     <div class="container">
       <section class="trusted-brand">
         <p>Trusted more than 150+ brand</p>
-        <img src="./img/svg/microsoft.svg" alt="">
-        <img src="./img/svg/google.svg" alt="">
-        <img src="./img/svg/slack.svg" alt="">
-        <img src="./img/svg/wordpress.svg" alt="">
-      </section>
+        <div class="brand-logos">
+          <a href="https://www.microsoft.com/uk-ua" target="_blank"><img src="./img/svg/microsoft.svg"
+              alt="microsoft logotype"></a>
+          <a href="https://www.google.com/?hl=ru" target="_blank"><img src="./img/svg/google.svg"
+              alt="google logotype"></a>
+          <a href="https://slack.com/" target="_blank"><img src="./img/svg/slack.svg" alt=" slack logotype"></a>
+          <a href="https://wordpress.com/ru/" target="_blank"><img src="./img/svg/wordpress.svg"
+              alt="wordpress logotype"></a>
+        </div>
     </div>
+    </section>
 
-    <div class="container">
-      <section class="newcommer-tools">
-        <div class="description">
-          <h3>Newcomer Tools</h3>
-          <p>Wow! see the latest update of the most <br> recommended tools from reliable designers <br> and developers
-          </p>
-          <button type="button" class="button-explore">Explore more</button>
-        </div>
-        <div class="card2">
-          <h3>Zeplin</h3>
-          <p>Free & Paid</p>
-          <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.</p>
-          <button type="button" class="action-btn">❤</button>
-          <button type="button" class="action-btn">📁</button>
-          <button type="button" class="visit-bth">Visit</button>
-        </div>
+    <section class="newcomer-tools">
+      <div class="container">
+        <div class="newcomer-content">
+          <div class="description">
+            <h3 class="tools-title2">Newcomer Tools</h3>
+            <p class="tools-subtitle2">Wow! see the latest update of the most <br> recommended tools from reliable
+              designers <br> and developers</p>
+            <button type="button" class="explore-btn">Explore more</button>
+          </div>
 
-        <div class="card2">
-          <h3>PHPStorm</h3>
-          <p>Free</p>
-          <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.</p>
-          <button type="button" class="action-btn">❤</button>
-          <button type="button" class="action-btn">📁</button>
-          <button type="button" class="visit-orange">Visit</button>
-        </div>
+          <div class="newcomer-cards">
+            <div class="newcomer-card">
+              <div class="card-header">
+                <img src="./img/zeplin.png" alt="Zeplin logotype" class="tool-icon">
+                <div class="tool-info">
+                  <h3>Zeplin</h3>
+                  <p class="tool-paid">Free & Paid</p>
+                </div>
+              </div>
+              <p class="tool-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <div class="tool-actions">
+                <button type="button" class="action-btn">❤</button>
+                <button type="button" class="action-btn">📁</button>
+                <button type="button" class="visit-btn">Visit</button>
+              </div>
+            </div>
 
-        <div class="card2">
-          <h3>Toolbox</h3>
-          <p>Free</p>
-          <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.</p>
-          <button type="button" class="action-btn">❤</button>
-          <button type="button" class="action-btn">📁</button>
-          <button type="button" class="visit-bth">Visit</button>
-        </div>
+            <div class="newcomer-card">
+              <div class="card-header">
+                <img src="./img/phpstorm.png" alt="PHPStorm logotype" class="tool-icon">
+                <div class="tool-info">
+                  <h3>PHPStorm</h3>
+                  <p class="tool-paid">Free</p>
+                </div>
+              </div>
+              <p class="tool-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <div class="tool-actions">
+                <button type="button" class="action-btn">❤</button>
+                <button type="button" class="action-btn">📁</button>
+                <button type="button" class="visit-btn">Visit</button>
+              </div>
+            </div>
 
-        <div class="card2">
-          <h3>Procreate</h3>
-          <p>Paid</p>
-          <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.</p>
-          <button type="button" class="action-btn">❤</button>
-          <button type="button" class="action-btn">📁</button>
-          <button type="button" class="visit-bth">Visit</button>
+            <div class="newcomer-card">
+              <div class="card-header">
+                <img src="./img/toolbox_app.png" alt="Toolbox logotype" class="tool-icon">
+                <div class="tool-info">
+                  <h3>Toolbox</h3>
+                  <p class="tool-paid">Free</p>
+                </div>
+              </div>
+              <p class="tool-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <div class="tool-actions">
+                <button type="button" class="action-btn">❤</button>
+                <button type="button" class="action-btn">📁</button>
+                <button type="button" class="visit-btn">Visit</button>
+              </div>
+            </div>
+
+            <div class="newcomer-card">
+              <div class="card-header">
+                <img src="./img/procreate.png" alt="Procreate logotype" class="tool-icon">
+                <div class="tool-info">
+                  <h3>Procreate</h3>
+                  <p class="tool-paid">Paid</p>
+                </div>
+              </div>
+              <p class="tool-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <div class="tool-actions">
+                <button type="button" class="action-btn">❤</button>
+                <button type="button" class="action-btn">📁</button>
+                <button type="button" class="visit-btn">Visit</button>
+              </div>
+            </div>
+          </div>
         </div>
-      </section>
-    </div>
+      </div>
+    </section>
 
     <div class="container">
       <section class="manager-card">
         <div class="arrow-left">&#8249</div>
         <div class="arrow-right">&#8250</div>
-        <img src="/img/ProductManager.png" alt="" class="manager">
+        <img src="./img/productmanager.png" alt="Product Manager photo" class="manager">
         <p class="manager-info">Incididunt cillum do sint sint enim ullamco id deserunt mollit <br> qui reprehenderit
           do. Velit ex tempor cillum ad sint occaecat. <br> Do nulla velit labore occaecat do deserunt Lorem magna <br>
           officia incididunt consectetur amet. Sunt consectetur veniam <br> minim ex commodo sint non. Occaecat aute
           officia excepteur <br> non laboris id qui ad.</p>
-        <div class="slaider"> <button class="slaid"></button> <button class="slaid"> </button> <button
+        <div class="slaider"> <button class="slaid"></button> <button class="slaid-orange"> </button> <button
             class="slaid"></button> </div>
       </section>
     </div>
@@ -251,13 +293,20 @@
       </section>
     </div>
   </main>
+
   <footer>
     <div class="container">
-      <img src="./img/svg/orange-logo.svg" alt="logotype">
-      <h1 class="logo">antools.</h1>
-      <p>Copyright 2021. Antools</p>
-      <p>Antool is a web collection of information on paid or free Design and Development tools</p>
-      <div class="contant">
+      <div class="footer-info">
+        <div class="logo-block">
+          <img src="./img/svg/orange-logo.svg" alt="logotype">
+          <h2 class="logo">antools.</h2>
+        </div>
+        <p class="copyright">Copyright 2021. Antools</p>
+        <p class="footer-description">Antool is a web collection of information on paid or free Design and Development
+          tools</p>
+      </div>
+
+      <div class="footer-contact">
         <h3>Contact Us</h3>
         <p>+621987463</p>
         <p>M Building, No.10 A</p>
@@ -274,7 +323,6 @@
         <p>Our Partners</p>
         <p>Blog</p>
       </div>
-
     </div>
   </footer>
 </body>
