Full complete project

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="/style/modern-normalize.css" />
   <link rel="stylesheet" href="/style/style.css" />
@@ -268,30 +268,32 @@
       </div>
     </section>
 
-    <div class="container">
       <section class="manager-card">
-        <div class="arrow-left">&#8249</div>
-        <div class="arrow-right">&#8250</div>
+        <div class="container">
+        <div class="arrow-left"><img src="./img/arrow-left.png" alt="arrow-left"></div>
         <img src="./img/productmanager.png" alt="Product Manager photo" class="manager">
+        <div class="manager-subtitle">
         <p class="manager-info">Incididunt cillum do sint sint enim ullamco id deserunt mollit <br> qui reprehenderit
           do. Velit ex tempor cillum ad sint occaecat. <br> Do nulla velit labore occaecat do deserunt Lorem magna <br>
           officia incididunt consectetur amet. Sunt consectetur veniam <br> minim ex commodo sint non. Occaecat aute
           officia excepteur <br> non laboris id qui ad.</p>
-        <div class="slaider"> <button class="slaid"></button> <button class="slaid-orange"> </button> <button
+          </div>
+            <div class="arrow-right"><img src="./img/arrow-right.png" alt="arrow-right"></div>
+        </div>
+          <div class="slaider"> <button class="slaid"></button> <button class="slaid-orange"> </button> <button
             class="slaid"></button> </div>
       </section>
-    </div>
-
-    <div class="container">
+     
       <section class="contributor">
+         <div class="container">
         <h2>Become a contributor?</h2>
         <p>Join us and get tips & tricks to become a great <br> Designer and Developer</p>
-        <form action="">
+        <form class="contributor-form" action="">
           <input type="text" placeholder="Enter your email..." />
           <button class="button-join-us" type="button">Join Us</button>
         </form>
+        </div>
       </section>
-    </div>
   </main>
 
   <footer>
